@@ -24,27 +24,27 @@ contains
 ! See eq. (B.3) and (B.4) in Baur and Glover, Nucl.Phys. B339 (1990) 38-66 
 
   function B0(s, mq2) result(res)
-    
     real(dp), intent(in) :: s, mq2
-
     complex(dp):: res, z
-    real(dp) :: rat
+    real(dp) :: ratio
     complex(dp) :: HPL1
     
-    rat = (four * mq2) / s
+    ratio = (four * mq2) / s
     
-    if (rat > one) then
-       z = half * (one + ii * sqrt(rat - one))
-!       res = two - ii * sqrt(rat - one) * HPL1(0, z / (z - one))
+    if (ratio > one) then
+      z = half * (one + ii * sqrt(ratio - one))
     else
-       z = half * (one + sqrt(one - rat))
-!       res = two + sqrt(one - rat) * HPL1(0, (z - one) / z)
+      z = half * (one + sqrt(one - ratio))
     end if
 
-    !    res = two+(two*z-one)*HPL1(0, (z - one) / z)
-    ! AB maybe?
-        res = two-(two*z-one)*HPL1(1, one/z)
-    
+    ! HPL1( 1, x) = -ln(1 - x)
+    ! HPL1(-1, x) = ln(1 + x) 
+    if (s > zero) then 
+      res = two + (two * z - one) * HPL1(-1, -one / z)
+    else 
+      res = two - (two * z - one) * HPL1(1, one / z)
+    end if
+
   end function B0
 
 !=======================================================================================
@@ -52,25 +52,27 @@ contains
 ! See eq. (B.6) in Baur and Glover, Nucl.Phys. B339 (1990) 38-66 
 
  function C0(s, mq2) result(res)
-    
     real(dp), intent(in) :: s, mq2
-    
     complex(dp) :: res, z
-    real(dp) :: rat
+    real(dp) :: ratio
     complex(dp) :: HPL2
    
-    rat = (four * mq2) / s 
+    ratio = (four * mq2) / s 
 
-    if (rat > one) then
-       z = half * (one + ii * sqrt(rat - one))
+    if (ratio > one) then
+       z = half * (one + ii * sqrt(ratio - one))
     else
-       z = half * (one + sqrt(one - rat))
+       z = half * (one + sqrt(one - ratio))
     end if
 
-!    res = HPL2(0, 0, (z - one) / z) / s
-    res = HPL2(1, 1, one/ z) / s
-    
-    
+    ! HPL2( 1,  1, x) = (1 / 2) * ln^2(1 - x)
+    ! HPL2(-1, -1, x) = (1 / 2) * ln^2(1 + x)
+    if (s > zero) then 
+      res = HPL2(-1, -1, -one / z) / s 
+    else 
+      res = HPL2(1, 1, one / z) / s 
+    end if
+  
  end function C0
 
 !=======================================================================================
@@ -78,9 +80,7 @@ contains
 ! See eq. (B.8) and (B.9) in Baur and Glover, Nucl.Phys. B339 (1990) 38-66 
 
   function D0(s, t, m2, mq2) result(res)
-    
     real(dp), intent(in) :: s, t, m2, mq2
-
     complex(dp) :: res 
     real(dp) :: u 
 
@@ -95,58 +95,45 @@ contains
   ! Ensure a +i*epsilon prescription for CHAPLIN 
   ! by using either the reflection properties or simply H(0,-1,z) 
   function hpl_prescription_helper(z) result(res)
-
     complex(dp), intent(in) :: z
-
     complex(dp) :: res
     complex(dp) :: z_in 
     complex(dp) :: HPL1, HPL2
-    !    complex(dp) :: tmp1, tmp2, tmp3
     complex(dp) :: tmp(3)
     integer :: imin
 
     ! Set imaginary part to zero if it's much smaller than the real part 
     z_in = z 
     if (abs(aimag(z)/real(z)) <= 1.0e-60_dp) then 
-        z_in = dcmplx(real(z), zero)  
+      z_in = dcmplx(real(z), zero)  
     endif 
+
+    ! Li2(0) = 0 
+    if (abs(real(z_in)) == zero .and. abs(aimag(z_in)) == zero) then 
+      res = dcmplx(zero, zero) 
+      return 
+    end if 
 
     ! Each of the three tmp's are equal to Li2(z) 
     ! However, they use different regions of the argument so that CHAPLIN 
-    ! will use different methods for evaluation  
-    tmp = (\ -HPL2(0,1,one/z_in) - pi**two/6._dp - HPL2(0,0,-z_in), &
-         &-HPL2(0,-1,-z_in),&
-         & -HPL2(0,1,one-z_in) + pi**two/6._dp + HPL1(1,-z_in+one) * HPL1(-1,-z_in) /)
-
+    ! will use different methods for evaluation 
+    tmp(1) = -HPL2(0,1,one/z_in) - pi**two / 6._dp - HPL2(0,0,-z_in)
+    tmp(2) = -HPL2(0,-1,-z_in)
+    tmp(3) = -HPL2(0,1,one-z_in) + pi**two / 6._dp + HPL1(1,-z_in+one) * HPL1(-1,-z_in) 
+  
     ! We will now check which of the methods give the smallest imaginary part 
     ! This does not matter if the imaginary part is non-zero
     ! However, in the case that we have a infinitesimal imaginary part this is necessary
-    imin = minloc(abs(aimag(tmp)))
+    imin = minloc(abs(aimag(tmp)), 1)
     res = tmp(imin)
-    
-!    if (abs(aimag(tmp1)) < abs(aimag(tmp2))) then
-!      if (abs(aimag(tmp1)) < abs(aimag(tmp3))) then
-!        res = tmp1
-!      else 
-!        res = tmp3 
-!      end if
-!    else 
-!      if (abs(aimag(tmp2)) < abs(aimag(tmp3))) then
-!        res = tmp2
-!      else 
-!        res = tmp3 
-!      end if
-!    end if 
 
   end function hpl_prescription_helper
 
   ! Eq. (B.9) in Baur and Glover 
   function CI2(s, t, u, v, mq2) result(res)
-
     real(dp), intent(in) :: s, t, u, v, mq2 
-
     complex(dp) :: res
-    real(dp) :: xp, xm, rat
+    real(dp) :: xp, xm, ratio
     complex(dp) :: y, HPL1, HPL2
     complex(dp) :: z1, z2, z3, z4
     complex(dp) :: sp1, sp2, sp3, sp4
@@ -155,13 +142,12 @@ contains
     y = (zero, zero)
     z1 = (zero, zero); z2 = (zero, zero); z3 = (zero, zero); z4 = (zero, zero)
 
-    rat = four * mq2 / v
+    ratio = four * mq2 / v
 
-!    if (v > 0 .and. v < (four * mq2)) then
-    if (rat > one) then       
-      y = half * (one + ii * dsqrt(rat - one))
+    if (ratio > one) then       
+      y = half * (one + ii * dsqrt(ratio - one))
     else
-      y = half * (one + dsqrt(one - rat))
+      y = half * (one + dsqrt(one - ratio))
     end if
 
     xp = half * (one + dsqrt(one + four * mq2 * u / (t * s)))
@@ -180,20 +166,17 @@ contains
 
     ! Ensure a +i*epsilon prescription for CHAPLIN 
     if (v < zero) then 
-        sp2 = hpl_prescription_helper(z2) 
-        sp3 = hpl_prescription_helper(z3) 
+      sp2 = hpl_prescription_helper(z2) 
+      sp3 = hpl_prescription_helper(z3) 
     else if (v > (four * mq2)) then 
-        sp1 = hpl_prescription_helper(z1) 
-        sp4 = hpl_prescription_helper(z4) 
+      sp1 = hpl_prescription_helper(z1) 
+      sp4 = hpl_prescription_helper(z4) 
     endif 
 
     res = sp1 - sp2 + sp3 - sp4 
 
-    res = res + log(dcmplx(-xm / xp, zero)) * log(dcmplx(one - v * xm * xp / mq2, zero))
-! AB the above looks suspicious, maybe something on the line of what is below?
-    !    res = res - log(-xm / xp) * HPL(0,one/(one-v * xm * xp / mq2))
-    ! AB alternative
-    ! res = res - log(-xm / xp) * HPL(1,v * xm * xp / mq2)
+    res = res + log(-xm / xp) * log(dcmplx(one + v * u / (s * t), zero))
+
   end function CI2
 
 !=======================================================================================
